--- a/Brief Proposal.qmd
+++ b/Brief Proposal.qmd
@@ -1,73 +1,82 @@
 ---
-title: "Brief Proposal"
+title: "Project Proposal"
 format: html
-editor: visual
+editor: source
+embed-resources: true
 ---
 
-**Title:**
-Bayesian Logistic Regression for Predicting Customer Churn in a Telecommunications Company
+**Team Members:** Liam Quach, Andrew Kerr
 
-**Team Members:**
-Liam Quach, Andrew Kerr
+**Project Type:** Option 1 - Full Bayesian data analysis in a new context (survival analysis)
 
-**Project Type:**
-Option 1 – Full Bayesian data analysis in a new context (logistic regression)
+## Context and Research Question
 
+The Telco Customer Churn dataset is a fictional dataset created by IBM to simulate customer data for a telecommunications company. This dataset was designed to help predict customer churn, referring to customers who stop using the company’s services, with the goal of analyzing customer behavior and developing strategies to retain customers.
 
-### **Context and Research Question**
+### Creation of Dataset
 
-Customer churn—when a customer discontinues service—is a major concern for subscription-based companies. The **Telco Customer Churn dataset** from Kaggle provides customer information including contract details, demographics, and service usage. Our goal is to **build a Bayesian logistic regression model to estimate the probability of churn based on customer attributes**.
+This dataset simulates customer data for a telecommunications company that provided home phone and Internet services to 7043 customers in California during the third quarter.
 
-**Research Question:**
+### Variables
+
+The dataset contains 21 columns:
+
+-   CustomerID: A unique identifier for each customer.
+-   Gender: The gender of the customer (Male, Female).
+-   SeniorCitizen: Indicates whether the customer is a senior citizen (1 for Yes, 0 for No).
+-   Partner: Indicates whether the customer has a partner (Yes, No).
+-   Dependents: Indicates whether the customer has dependents (Yes, No).
+-   Tenure: The number of months the customer has been with the company.
+-   PhoneService: Indicates whether the customer has a phone service (Yes, No).
+-   MultipleLines: Indicates whether the customer has multiple lines (Yes, No, No phone service).
+-   InternetService: The type of internet service the customer has (DSL, Fiber optic, No).
+-   OnlineSecurity: Indicates whether the customer has online security (Yes, No, No internet service).
+-   OnlineBackup: Indicates whether the customer has online backup (Yes, No, No internet service).
+-   DeviceProtection: Indicates whether the customer has device protection (Yes, No, No internet service).
+-   TechSupport: Indicates whether the customer has tech support (Yes, No, No internet service).
+-   StreamingTV: Indicates whether the customer has streaming TV (Yes, No, No internet service).
+-   StreamingMovies: Indicates whether the customer has streaming movies (Yes, No, No internet service).
+-   Contract: The type of contract the customer has (Month-to-month, One year, Two year).
+-   PaperlessBilling: Indicates whether the customer has paperless billing (Yes, No).
+-   PaymentMethod: The payment method used by the customer (Electronic check, Mailed check, Bank transfer, Credit card).
+-   MonthlyCharges: The amount charged to the customer monthly.
+-   TotalCharges: The total amount charged to the customer over the tenure.
+-   Churn: Indicates whether the customer churned (Yes, No).
+
+### Time to Event and Censoring Variables
+
+-   Time to event variable: Amount of months until the customers discontinues service with the company (represented by the column tenure).
+-   Right Censoring: Right censoring may occur if a customer does not discontinue service with the company throughout the time of the study (represented by the column Churn).
+
+### Source
+
+[Kaggle: Telco Customer Churn Dataset](https://www.kaggle.com/datasets/blastchar/telco-customer-churn)
+
+### Research Question
 
 > *How do customer characteristics (e.g., contract type, monthly charges, tenure) influence the likelihood of churn?*
 
+## Proposed Bayesian Model
 
+-   **Model Type:** Bayesian Proportional Hazards Model
 
-### **Data Description**
+-   **Likelihood:** Weibull likelihood `tenure`, with `Churn` as the event indicator. This was chosen based on preliminary data analysis (Parametric Survival Analysis)
 
-* **Source:** [Kaggle: Telco Customer Churn Dataset](https://www.kaggle.com/datasets/blastchar/telco-customer-churn)
-* **Sample Size:** \~7,000 observations
-* **Target Variable:** `Churn` (Yes/No)
-* **Predictors:**
+-   **Link Function:** log link
 
-  * Continuous: `tenure`, `MonthlyCharges`, `TotalCharges`
-  * Categorical: `Contract`, `InternetService`, `PaymentMethod`, `SeniorCitizen`, `Gender`
+-   **Priors:**
 
-We will preprocess categorical variables using dummy encoding and scale numeric features.
+      -   Regression Coefficients: Normal(0, 1); A weakly informative prior with a variance of 1 to allow for a reasonable range of effect sizes.
+      -   Weibull Shape Parameter: Half Normal(1); This prior places more probability on smaller values, reflecting our initial expectation that the hazard may be decreasing or constant early on.
+      -   Weibull Scale Parameter: Normal(0, 1)
+      
+-   **Predictors:** To mirror our frequentist cox regression, we will use the same predictors: Partner, InternetService, OnlineSecurity, DeviceProtection, StreamingTV, StreamingMovies, Contract, PaperlessBilling, PaymentMethod, TotalCharges
 
+## Planned Analyses
 
-
-### **Proposed Bayesian Model**
-
-* **Model Type:** Bayesian Logistic Regression
-* **Likelihood:** Bernoulli likelihood for binary outcome `Churn`
-* **Link Function:** Logit
-* **Priors:**
-
-  * Coefficients: Normal(0, 5)
-  * Intercept: Normal(0, 10)
-* **Justification of Priors:** Weakly informative priors to reflect baseline uncertainty while preventing overfitting.
-
-
-
-### **Planned Analyses**
-
-* Fit the model using `brms` or `rstanarm` in R.
-* Summarize posterior distributions for coefficients (credible intervals, posterior means).
-* Posterior predictive checks to assess model fit.
-* Sensitivity analysis using alternative priors.
-* Compare to frequentist logistic regression results.
-* Use model to generate posterior predicted probabilities for new data.
-
-
-
-### **Deliverables**
-
-* Reproducible report in Quarto or RMarkdown
-* Code and plots (diagnostics, posteriors, PPC)
-* Summary of findings and comparison with frequentist approach
-
-
-
-
+-   Fit the model using `brms`.
+-   Summarize posterior distributions for coefficients (credible intervals, posterior means).
+-   Posterior predictive checks to assess model fit.
+-   Sensitivity analysis using alternative priors.
+-   Compare to frequentist cox regression results.
+-   Use model to generate posterior predicted probabilities for new data.
